Android: Attach java stack of task origins when asserts are enabled
E.g.:
java.lang.Error: Error
     at org.chromium.base.task.ChainedTasksTest.lambda$testUncaughtException$6(ChainedTasksTest.java:184)
     at org.chromium.base.task.ChainedTasksTest$$ExternalSyntheticLambda6.run(Unknown Source:4)
     at org.chromium.base.task.PostTask$TaskOriginRunnable.run(PostTask.java:79)
     at org.chromium.base.task.ChainedTasks$1.run(ChainedTasks.java:52)
     at org.chromium.base.task.PostTask$TaskOriginRunnable.run(PostTask.java:79)
     at org.chromium.base.task.TaskRunnerImpl.runPreNativeTask(TaskRunnerImpl.java:256)
     at org.chromium.base.task.TaskRunnerImpl$$ExternalSyntheticLambda0.run(Unknown Source:2)
     at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1137)
     at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:637)
     at java.lang.Thread.run(Thread.java:1012)
Caused by: org.chromium.base.task.TaskOriginException: vvv This is where the task was posted. vvv
     at org.chromium.base.task.ChainedTasks.add(ChainedTasks.java:64)
     at org.chromium.base.task.ChainedTasksTest.testUncaughtException(ChainedTasksTest.java:179)
     at java.lang.reflect.Method.invoke(Native Method)
     at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:59)
     at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:12)
     at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:61)
     at org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:17)
     at org.chromium.base.test.ScreenshotOnFailureStatement.evaluate(ScreenshotOnFailureStatement.java:43)
     at org.junit.runners.ParentRunner$3.evaluate(ParentRunner.java:306)
     at org.chromium.base.test.BaseJUnit4ClassRunner$3.evaluate(BaseJUnit4ClassRunner.java:410)
     at org.junit.runners.BlockJUnit4ClassRunner$1.evaluate(BlockJUnit4ClassRunner.java:100)
     at